# smooth-code

./: .gitignore  AGENTS.md  Cargo.toml  PROGRESS.md  config.example.toml
.smooth-code/skills/commit-changes/: SKILL.md
crates/app-server/: Cargo.toml
crates/app-server-protocol/: Cargo.toml
crates/app-server-protocol/src/: common.rs  lib.rs
crates/app-server/src/: core_message_processor.rs  error.rs  error_code.rs  in_process.rs  lib.rs  message_processor.rs  outgoing_message.rs
crates/config/: Cargo.toml
crates/config/src/: color.rs  error.rs  lib.rs  schema.rs
crates/core/: Cargo.toml
crates/core/src/: core.rs  core_thread.rs  environment.rs  error.rs  lib.rs  provider.rs  rollout.rs  test_support.rs  thread_manager.rs  tools.rs
crates/core/src/agent/: agent_names.txt  agent_resolver.rs  control.rs  fork.rs  mailbox.rs  mod.rs  multi_agent_client.rs  notify.rs  plan_mode.rs  prompt.rs  registry.rs  role.rs  status.rs  subagent_result.rs
crates/core/src/context_manager/: history.rs  mod.rs
crates/core/src/state/: mod.rs  session.rs  turn.rs
crates/core/src/tasks/: mod.rs  regular.rs
crates/core/tests/: multi_agent_e2e.rs  plan_mode_e2e.rs  skills_e2e.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: agent_path.rs  lib.rs
crates/state-db/: Cargo.toml
crates/state-db/migrations/: 0001_initial.sql
crates/state-db/src/: error.rs  handle.rs  lib.rs
crates/state-db/tests/: migration.rs
crates/tools/: Cargo.toml
crates/tools/src/: ask_user_question.rs  cancel.rs  client.rs  delete.rs  dynamic_tool.rs  edit.rs  error.rs  exit_plan_mode.rs  kill_sweep.rs  lib.rs  list_dir.rs  output.rs  plan_write.rs  read.rs  read_file.rs  run_command.rs  shared.rs  skill.rs  skills.rs  todo_write.rs  write.rs
crates/tools/src/multi_agents/: client.rs  close_agent.rs  list_agents.rs  mod.rs  send_message.rs  spawn_agent.rs  wait_agent.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  app_event.rs  app_server_client.rs  app_server_session.rs  composer.rs  config_state.rs  diff_render.rs  error.rs  highlight.rs  history_cell.rs  lib.rs  main.rs  markdown.rs  markdown_render.rs  markdown_stream.rs  plan_approval.rs  project_instructions.rs  question_picker.rs  skill_popup.rs  streaming.rs  subagent_preview.rs  telemetry.rs  wrap.rs
crates/tui/src/app/: actions.rs  effects.rs  input.rs  preview.rs  protocol.rs  render.rs  scroll.rs  test_support.rs
docs/: agent-family-design.md  codex-session-analysis.md  config.md  connection_todo.md  explore_subagent_system_prompt.md  multi_agent_migration_plan.md  openai_interrupt_resume_recovery.md  system_prompt.md  tool_effect_refactor.md
