[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["Cazean <lkzheg@gmail.com>"]
license = "MIT"

[workspace]
resolver = "3"
members = ["crates/app-server","crates/app-server-protocol","crates/core", "crates/protocol", "crates/tui"]

default-members = [
  "crates/tui"
]

[workspace.dependencies]
anyhow = "1.0.102"
async-stream = "0.3.6"
async-channel = "2.5.0"
futures-util = "0.3.32"
indexmap = "2.14.0"
rig-core = "0.35.0"
schemars = "1.2.1"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tokio = "1.52.1"
tokio-util = "0.7.18"
uuid = "1.23.1"
