[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["Cazean <lkzheg@gmail.com>"]
license = "MIT"

[workspace]
resolver = "3"
members = ["crates/app-server", "crates/app-server-protocol", "crates/core", "crates/protocol", "crates/state-db", "crates/tools", "crates/tui"]

default-members = [
  "crates/tui"
]

[workspace.dependencies]
anyhow = "1.0.102"
async-stream = "0.3.6"
async-channel = "2.5.0"
console-subscriber = "0.5.0"
diffy = "0.4.2"
futures-util = "0.3.32"
indexmap = "2.14.0"
rig = { package = "rig-core", version = "0.37.0", features = ["websocket"] }
schemars = "1.2.1"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
time = { version = "0.3.44", features = ["formatting", "local-offset", "macros", "serde"] }
tokio = { version = "1.52.1", features = ["tracing"] }
tokio-tungstenite = "0.23.1"
tokio-util = "0.7.18"
tracing = "0.1.41"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0.17"
url = "2.5.8"
uuid = "1.23.1"
