[package]
name = "app-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
app-server-protocol = { path = "../app-server-protocol" }
futures-util.workspace = true
smooth-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
smooth-protocol = { path = "../protocol" }
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
tracing.workspace = true
