[package]
name = "smooth-core"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
app-server-protocol = { path = "../app-server-protocol" }
async-stream.workspace = true
async-channel.workspace = true
futures-util.workspace = true
indexmap.workspace = true
rig-core.workspace = true
serde.workspace = true
serde_json.workspace = true
smooth-protocol = { path = "../protocol" }
thiserror = "2.0.18"
time.workspace = true
tokio.workspace = true
tokio-util = { workspace = true, features = ["rt"] }
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }
