[package]
name = "smooth-core"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
app-server-protocol = { path = "../app-server-protocol" }
async-stream.workspace = true
async-channel.workspace = true
futures-util.workspace = true
indexmap.workspace = true
rig.workspace = true
serde.workspace = true
serde_json.workspace = true
smooth-protocol = { path = "../protocol" }
smooth-state-db = { path = "../state-db" }
time.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt"] }
tokio-tungstenite.workspace = true
tokio-util = { workspace = true, features = ["rt"] }
tools = { path = "../tools" }
tracing.workspace = true
url.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tempfile = "3"
