[package]
name = "cazean-state-db"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"
