[package]
name = "tools"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
app-server-protocol = { path = "../app-server-protocol" }
futures-util.workspace = true
rig-core.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
smooth-protocol = { path = "../protocol" }
thiserror = "2.0.18"
tokio = { workspace = true, features = ["macros", "rt", "sync"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tempfile = "3"
