[package]
name = "tools"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
app-server-protocol = { path = "../app-server-protocol" }
diffy.workspace = true
futures-util.workspace = true
rig.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
smooth-protocol = { path = "../protocol" }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "sync"] }

[dev-dependencies]
tempfile = "3"
