[package]
name = "smooth-tui"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
app-server = { path = "../app-server" }
app-server-protocol = { path = "../app-server-protocol" }
console-subscriber.workspace = true
crossterm = { version = "0.29.0", features = ["event-stream"] }
diffy.workspace = true
futures-util.workspace = true
pulldown-cmark = "0.13.0"
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
serde.workspace = true
serde_json.workspace = true
smooth-core = { path = "../core" }
smooth-protocol = { path = "../protocol" }
syntect = { version = "5", default-features = false }
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
two-face = { version = "0.5", default-features = false, features = ["syntect-onig"] }
unicode-width = "0.2.0"
uuid = {workspace = true, features = ["serde", "v7"]}

[dev-dependencies]
tempfile = "3"
